--- a/LeckerBag/WebContent/1_details_abo.html
+++ b/LeckerBag/WebContent/1_details_abo.html
@@ -41,7 +41,7 @@
                         </li>                         
                         <li>&nbsp;
                             <a href="2_uebersicht_abo.html">Alle Abonnements&nbsp;</a>
-                        </li>                                                                                                                                                                                                                                                &nbsp;
+                        </li>                                                                                                                                                                                                                                                                                                &nbsp;
                         <li>&nbsp;Details des Abonnement &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -94,7 +94,7 @@
                                                 </div>
                                             </div>
                                             <div class="row text-left" style="margin-top: 30px">
-                                                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+                                                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-center">
                                                     <button type="button" class="btn-default button_paulo_3 button_paulo" data-pg-name="Button: Suchen" style="margin-bottom: 5px" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                     
                                                     <button type="button" class="button_paulo" data-pg-name="Button: " style="margin-bottom: 5px; margin-right:5px;" onclick="location.href='bestellung_kunde.html'">Bearbeiten</button>                                                     
                                                     <button type="button" class="button_paulo" data-pg-name="Button: Suchen" style="margin-bottom: 5px; margin-right: 8px; ">Drucken</button>
