--- a/LeckerBag/WebContent/2_uebersicht_abo.html
+++ b/LeckerBag/WebContent/2_uebersicht_abo.html
@@ -74,35 +74,35 @@
                                 <div class="col-md-12 dash_element col-xs-12 col-sm-12 col-lg-12">
                                     <div class="row" style="margin-bottom: 20px">
                                         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="margin-bottom: 15px">
-                                            <div class="row border_abo abo_border abo_color" data-pg-collapsed>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                            <div class="row border_abo abo_border abo_color">
+                                                <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
                                                     <a>Arnold</a>
                                                 </div>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
                                                     <a>Sandertorbäck</a>
                                                 </div>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
                                                     <p>27.04.2015</p>
                                                 </div>
-                                                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12" data-pg-collapsed="">
                                                     <h4>Abonnement<br></h4>
                                                     <a>166168343</a>
                                                 </div>
                                             </div>
                                             <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px; border-bottom: 1px solid #ddd;">
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                                <div class="col-md-3 col-lg-3 text-left col-sm-3 col-xs-12">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='1_details_abo.html'">Details</button>
                                                 </div>
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                                <div class="col-md-3 col-lg-3 text-left col-sm-3 col-xs-12">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='6_rezension_abo.html'">Bewerten</button>
                                                 </div>
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                                <div class="col-md-3 col-lg-3 text-left col-sm-3 col-xs-12">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'">Kündigen</button>
                                                 </div>
-                                                <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12" style="margin-top: 15px">
+                                                <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12" style="margin-top: 15px">
                                                     <i class="fa fa-star logo_info fa-lg"></i>
                                                     <i class="fa fa-star logo_info fa-lg"></i>
                                                     <i class="fa fa-star logo_info fa-lg"></i>
@@ -113,36 +113,36 @@
                                         </div>
                                     </div>
                                     <div class="row" style="margin-bottom: 20px">
-                                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="margin-bottom: 15px">
-                                            <div class="row border_abo abo_border abo_color" data-pg-collapsed>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="margin-bottom: 15px" data-pg-collapsed>
+                                            <div class="row border_abo abo_border abo_color">
+                                                <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
                                                     <a>Bernadette</a>
                                                 </div>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
                                                     <a>Rösner Backstube</a>
                                                 </div>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
                                                     <p>27.04.2015</p>
                                                 </div>
-                                                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12" data-pg-collapsed="">
                                                     <h4>Abonnement<br></h4>
                                                     <a>166168343</a>
                                                 </div>
                                             </div>
-                                            <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px; border-bottom: 1px solid #ddd;" data-pg-collapsed>
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                            <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px; border-bottom: 1px solid #ddd;">
+                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-3">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='1_details_abo.html'">Details</button>
                                                 </div>
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-3">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='6_rezension_abo.html'">Bewerten</button>
                                                 </div>
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-3">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'">Kündigen</button>
                                                 </div>
-                                                <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12" style="margin-top: 15px">
+                                                <div class="col-md-3 col-lg-3 col-xs-12 col-sm-3" style="margin-top: 15px">
                                                     <i class="fa fa-star logo_info fa-lg"></i>
                                                     <i class="fa fa-star logo_info fa-lg"></i>
                                                     <i class="fa fa-star logo_info fa-lg"></i>
@@ -154,35 +154,35 @@
                                     </div>
                                     <div class="row" style="margin-bottom: 20px">
                                         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="margin-bottom: 15px">
-                                            <div class="row border_abo abo_border abo_color" data-pg-collapsed>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                            <div class="row border_abo abo_border abo_color">
+                                                <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
                                                     <a>Heino</a>
                                                 </div>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                <div class="col-md-3 col-lg-3 col-xs-12 col-sm-3" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
                                                     <a>Webers Bäckereiladen</a>
                                                 </div>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                <div class="col-md-3 col-lg-3 col-xs-12 col-sm-3" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
                                                     <p>27.04.2015</p>
                                                 </div>
-                                                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                <div class="col-md-3 col-lg-3 col-xs-12 col-sm-3" data-pg-collapsed="">
                                                     <h4>Abonnement<br></h4>
                                                     <a>166168343</a>
                                                 </div>
                                             </div>
-                                            <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px; border-bottom: 1px solid #ddd;" data-pg-collapsed>
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                            <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px; border-bottom: 1px solid #ddd;">
+                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-3">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='1_details_abo.html'">Details</button>
                                                 </div>
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-3">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='6_rezension_abo.html'">Bewerten</button>
                                                 </div>
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-3">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'">Kündigen</button>
                                                 </div>
-                                                <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12" style="margin-top: 15px">
+                                                <div class="col-md-3 col-lg-3 col-xs-12 col-sm-3" style="margin-top: 15px">
                                                     <i class="fa fa-star logo_info fa-lg"></i>
                                                     <i class="fa fa-star logo_info fa-lg"></i>
                                                     <i class="fa fa-star logo_info fa-lg"></i>
