--- a/LeckerBag/WebContent/header.html
+++ b/LeckerBag/WebContent/header.html
@@ -12,6 +12,16 @@
         <link href="css/bootstrap-responsive.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
     </head>  
+    <script>
+    	function showPane(){
+    		if($("#nav-wrapper").css("display") === "none"){
+        		$("#nav-wrapper").css("display", "");
+    		}
+    		else{
+    			$("#nav-wrapper").css("display", "none");
+    		}
+    	};
+    </script>
     <body>
         <div class="row">
             <div class="col-md-12 col-lg-12">
@@ -38,7 +48,7 @@
                         <nav class="navbar navbar-default nav_button" role="navigation" data-pg-collapsed> 
                             <div class="container-fluid" id="navigation_bar"> 
                                 <div class="navbar-header" data-pg-collapsed> 
-                                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> 
+                                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" onclick="showPane()"> 
                                         <span class="sr-only">Toggle navigation</span> 
                                         <span class="icon-bar"></span> 
                                         <span class="icon-bar"></span> 
