--- a/LeckerBag/WebContent/8_lieferant_rezension_dash.html
+++ b/LeckerBag/WebContent/8_lieferant_rezension_dash.html
@@ -258,7 +258,7 @@
                                                             </div>
                                                             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                                                 <h4>Abonnement ist grandios &amp; lecker!</h4>
-                                                                <h5><strong>Kunde:</strong> <a>Heike Schmidt</a> | <strong>Datum:</strong> 21.04.2015</h5> 
+                                                                <h5><strong>Kunde:</strong> <a>Heike Schmidt</a> | <strong>Datum:</strong> 21.04.2015 | 7-Tage Abonnement</h5> 
                                                                 <p>Ich kann über Müllerbäck nichts schlechtes berichten. Die Bags sind immer frisch, pünktlich und lecker. Nachdem wir zuvor unsere Bags von einem anderen Lieferanten bezogen haben, welcher aber keine Mehrkornbrötchen angeboten hat sind<a>(mehr)</a></p>
                                                             </div>
                                                         </div>                                                         
@@ -274,7 +274,7 @@
                                                             </div>
                                                             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                                                 <h4>Abonnement ist grandios &amp; lecker!</h4>
-                                                                <h5><strong>Kunde:</strong> <a>Max Mustermann</a> | <strong>Datum:</strong> 21.04.2015</h5> 
+                                                                <h5><strong>Kunde:</strong> <a>Max Mustermann</a> | <strong>Datum:</strong> 21.04.2015 |&nbsp;&nbsp;14-Tage Abonnement</h5> 
                                                                 <p>Ich kann über Müllerbäck nichts schlechtes berichten. Die Bags sind immer frisch, pünktlich und lecker. Nachdem wir zuvor unsere Bags von einem anderen Lieferanten bezogen haben, welcher aber keine Mehrkornbrötchen angeboten hat sind<a>(mehr)</a></p>
                                                             </div>
                                                         </div>                                                         
@@ -290,7 +290,7 @@
                                                             </div>
                                                             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                                                 <h4>Abonnement ist grandios &amp; lecker!</h4>
-                                                                <h5><strong>Kunde:</strong> <a>Maria Müller</a> | <strong>Datum:</strong> 21.04.2015</h5> 
+                                                                <h5><strong>Kunde:</strong> <a>Maria Müller</a> | <strong>Datum:</strong> 21.04.2015 |&nbsp;&nbsp;7-Tage Abonnement</h5> 
                                                                 <p>Ich kann über Müllerbäck nichts schlechtes berichten. Die Bags sind immer frisch, pünktlich und lecker. Nachdem wir zuvor unsere Bags von einem anderen Lieferanten bezogen haben, welcher aber keine Mehrkornbrötchen angeboten hat sind<a>(mehr)</a></p>
                                                             </div>
                                                         </div>                                                         
@@ -306,7 +306,7 @@
                                                             </div>
                                                             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                                                 <h4>Abonnement ist grandios &amp; lecker!</h4>
-                                                                <h5><strong>Kunde:</strong> <a>Maria Müller</a> | <strong>Datum:</strong> 21.04.2015</h5> 
+                                                                <h5><strong>Kunde:</strong> <a>Maria Müller</a> | <strong>Datum:</strong> 21.04.2015 |&nbsp;&nbsp;14-Tage Abonnement</h5> 
                                                                 <p>Ich kann über Müllerbäck nichts schlechtes berichten. Die Bags sind immer frisch, pünktlich und lecker. Nachdem wir zuvor unsere Bags von einem anderen Lieferanten bezogen haben, welcher aber keine Mehrkornbrötchen angeboten hat sind<a>(mehr)</a></p>
                                                             </div>
                                                         </div>                                                         
@@ -348,7 +348,7 @@
                                                             </div>
                                                             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                                                 <h4>Abonnement ist grandios &amp; lecker!</h4>
-                                                                <h5><strong>Kunde:</strong> <a>Heike Schmidt</a> | <strong>Datum:</strong> 21.04.2015</h5> 
+                                                                <h5><strong>Kunde:</strong> <a>Heike Schmidt</a> | <strong>Datum:</strong> 21.04.2015 |&nbsp;14-Tage Abonnement</h5> 
                                                                 <p>Ich kann über Müllerbäck nichts schlechtes berichten. Die Bags sind immer frisch, pünktlich und lecker. Nachdem wir zuvor unsere Bags von einem anderen Lieferanten bezogen haben, welcher aber keine Mehrkornbrötchen angeboten hat sind<a>(mehr)</a></p>
                                                             </div>
                                                         </div>                                                         
@@ -364,7 +364,7 @@
                                                             </div>
                                                             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                                                 <h4>Abonnement ist grandios &amp; lecker!</h4>
-                                                                <h5><strong>Kunde:</strong> <a>Max Mustermann</a> | <strong>Datum:</strong> 21.04.2015</h5> 
+                                                                <h5><strong>Kunde:</strong> <a>Max Mustermann</a> | <strong>Datum:</strong> 21.04.2015 |&nbsp;14-Tage Abonnement</h5> 
                                                                 <p>Ich kann über Müllerbäck nichts schlechtes berichten. Die Bags sind immer frisch, pünktlich und lecker. Nachdem wir zuvor unsere Bags von einem anderen Lieferanten bezogen haben, welcher aber keine Mehrkornbrötchen angeboten hat sind<a>(mehr)</a></p>
                                                             </div>
                                                         </div>                                                         
@@ -380,7 +380,7 @@
                                                             </div>
                                                             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                                                 <h4>Abonnement ist grandios &amp; lecker!</h4>
-                                                                <h5><strong>Kunde:</strong> <a>Maria Müller</a> | <strong>Datum:</strong> 21.04.2015</h5> 
+                                                                <h5><strong>Kunde:</strong> <a>Maria Müller</a> | <strong>Datum:</strong> 21.04.2015 |&nbsp;14-Tage Abonnement</h5> 
                                                                 <p>Ich kann über Müllerbäck nichts schlechtes berichten. Die Bags sind immer frisch, pünktlich und lecker. Nachdem wir zuvor unsere Bags von einem anderen Lieferanten bezogen haben, welcher aber keine Mehrkornbrötchen angeboten hat sind<a>(mehr)</a></p>
                                                             </div>
                                                         </div>                                                         
@@ -396,7 +396,7 @@
                                                             </div>
                                                             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                                                 <h4>Abonnement ist grandios &amp; lecker!</h4>
-                                                                <h5><strong>Kunde:</strong> <a>Maria Müller</a> | <strong>Datum:</strong> 21.04.2015</h5> 
+                                                                <h5><strong>Kunde:</strong> <a>Maria Müller</a> | <strong>Datum:</strong> 21.04.2015 |&nbsp;14-Tage Abonnement</h5> 
                                                                 <p>Ich kann über Müllerbäck nichts schlechtes berichten. Die Bags sind immer frisch, pünktlich und lecker. Nachdem wir zuvor unsere Bags von einem anderen Lieferanten bezogen haben, welcher aber keine Mehrkornbrötchen angeboten hat sind<a>(mehr)</a></p>
                                                             </div>
                                                         </div>                                                         
