--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -130,10 +130,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row" data-pg-collapsed>
+                    <div class="row">
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
-                                <div class="col-md-12 dash_element" data-pg-collapsed> 
+                                <div class="col-md-12 dash_element"> 
                                     <h4>Meine Guthaben</h4>
                                     <h5>Guthaben bei verschiedenen Lieferanten</h5>
                                     <div class="row" id="dashboard_stornierungen_tb_holder">
@@ -152,28 +152,38 @@
                                                         <th>Lieferant</th>                                                         
                                                         <th>Guthaben</th>
                                                         <th>Letzte Transaktion</th>
+                                                        <th class="text-left">Guthaben auszahlen</th>
                                                     </tr>                                                     
                                                 </thead>                                                 
                                                 <tbody> 
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr> 
                                                         <td>Bäckerei Schwarz</td>                                                         
                                                         <td>12,00 €</td>
                                                         <td>- 02,00 € (
                                                             <a style="background-color: rgb(254, 254, 254);">29.06.2015)</a>
                                                         </td>
+                                                        <td>
+                                                            <a style="background-color: rgb(254, 254, 254);">Betrag auszahlen</a>
+                                                        </td>
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr> 
                                                         <td>Bäckerei Maier</td>                                                         
                                                         <td>04,30 €</td>
                                                         <td>+ 04,30 € (
                                                             <a style="background-color: rgb(254, 254, 254);">26.06.2015)</a>&nbsp;
                                                         </td>
+                                                        <td>
+                                                            <a style="background-color: rgb(254, 254, 254);">Betrag auszahlen</a>
+                                                        </td>
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr> 
                                                         <td>Bäckerei Müller</td>                                                         
                                                         <td>05,20 €</td>
                                                         <td>+ 04,20 €&nbsp;(
                                                             <a style="background-color: rgb(254, 254, 254);">26.06.2015)</a>&nbsp;
+                                                        </td>
+                                                        <td>
+                                                            <a style="background-color: rgb(254, 254, 254);">Betrag auszahlen</a>
                                                         </td>
                                                     </tr>
                                                 </tbody>
@@ -185,7 +195,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12" data-pg-collapsed>
+                        <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element"> 
                                     <h4>Neuigkeiten</h4>
