--- a/LeckerBag/WebContent/header2.html
+++ b/LeckerBag/WebContent/header2.html
@@ -64,7 +64,7 @@
 					                                          <a href="Ueber_Uns.html">Über Uns</a> 
 					                                      </li>                                         
 					                                      <li class="nav_item"> 
-					                                          <a href="#">Kontakt</a> 
+					                                          <a href="kontakt.html">Kontakt</a> 
 					                                      </li>                                         
 					                                      <li class="nav_item" id="nav_item_last"> 
 					                                          <a href="login.html">Anmelden</a> 
